syntax = "proto3";

package auth;

option go_package = "diploma/proto/auth;authpb";

// Sign Up
message SignUpRequest {
    string username = 1;
    string password = 2;
    string firstname = 3;
    string lastname = 4;
    string email = 5;
    string sex = 6;
    string age = 7;
}

message SignUpResponse {
    bool status = 1;
    string token = 2;
}

// Sign In
message SignInRequest {
    string username = 1;
    string password = 2;
}

message SignInResponse {
    bool status = 1;
    string token = 2;
}

service AuthService {
    rpc SignUp(SignUpRequest) returns (SignUpResponse);
    rpc SignIn(SignInRequest) returns (SignInResponse);
}
